Remove tclserv directories and look for tclserv.pc in tcl server canvas
- tclserv is now a standalone package, so remove it from here.
- modules generated with -t now look for tclserv.pc >= 2.7 (the standalone
  version) and include tclserv/*.h instead of genom/

--- a/canvas/autoconf/configure.ac.in
+++ b/canvas/autoconf/configure.ac.in
@@ -90,7 +90,9 @@ AC_SUBST(GENOM_CFLAGS)
 AC_SUBST(GENOM_LIBS)
 
 dnl Tcl
-ifelse([$genTcl$], [yes], [ROBOT_LIB_TCL(@TCL_CONFIG_PATH@)], [])
+ifelse([$genTcl$], [yes],
+ [PKG_CHECK_MODULES(TCLSERV, [tclserv >= 2.7])
+  ROBOT_LIB_TCL(@TCL_CONFIG_PATH@)], [])
 
 dnl transgen and oprs
 ifelse([$genOpenprs$], [yes], [
