--- a/canvas/autoconf/configure.ac.in
+++ b/canvas/autoconf/configure.ac.in
@@ -92,7 +92,7 @@ AC_SUBST(GENOM_LIBS)
 dnl Tcl
 ifelse([$genTcl$], [yes],
  [PKG_CHECK_MODULES(TCLSERV, [tclserv >= 2.7])
-  ROBOT_LIB_TCL(@TCL_CONFIG_PATH@)], [])
+  ROBOT_LIB_TCL], [])
 
 dnl transgen and oprs
 ifelse([$genOpenprs$], [yes], [
