Export SHELL for libtool, as done by automake
ok'ed by anthony.mallet@

--- a/config.mk.in
+++ b/config.mk.in
@@ -78,3 +78,4 @@ LIBTOOL_DEPS=   @LIBTOOL_DEPS@
 # --- Paths -------------------------------------------------------------
 
 CANVASDIR=	$(datadir)/genom/@PACKAGE_VERSION@
+SHELL=@SHELL@
