--- a/canvas/autoconf/config.mk.in
+++ b/canvas/autoconf/config.mk.in
@@ -1,6 +1,6 @@
 
 #
-# Copyright (c) 2003 LAAS/CNRS                        --  Mon Aug 25 2003
+# Copyright (c) 2003-2012 LAAS/CNRS                        --  Mon Aug 25 2003
 # All rights reserved.
 #
 # Redistribution  and  use in source   and binary forms,  with or without
@@ -83,7 +83,7 @@ TEST_BIN=	$module$Test$(BINEXT)
 ABI_VERSION_INFO=	@ABI_VERSION_INFO@
 CLIENT_LIB=		lib$module$Client$(LIBEXT)
 TCLCLIENT_LIB=		lib$module$TclServ$(LIBEXT)
-OPENPRSCLIENT_LIB=	lib$module$Openprs$(LIBEXT)
+OPENPRSCLIENT_MOD=	mod$module$Openprs$(LIBEXT)
 TCLSERVCLIENT_LIB=  lib$module$TclservClient$(LIBEXT)
 
 # Use that to link to our client library
