A terrible hack to get the openprs datapath inside the .inc. But, the nice thing about this, is that loading the module (.so) and the main .inc will take care of completely loading a module. Now transgen is just going to be a module (.so) and one .inc file with  a bunch of load opf/load external.

--- a/canvas/server/Makefile.in
+++ b/canvas/server/Makefile.in
@@ -290,6 +290,7 @@ install-data:
 	$(INSTALL_DATA) $(top_srcdir)/$(GENFILE) ${DESTDIR}$(datadir)/gen
 $genTcl$	$(MKINSTALLDIRS) ${DESTDIR}$(datadir)/tcl
 $genTcl$	$(INSTALL_DATA) $(srcdir)/$(tclclient_tcl) ${DESTDIR}$(datadir)/$(tclclient_tcl)
+$genOpenprs$	$(SED) -e 's|@MODULEDATADIR@|${DESTDIR}$(datadir)/openprs|' openprs/$module$Openprs.inc.input > openprs/$module$Openprs.inc
 $genOpenprs$	$(MKINSTALLDIRS) ${DESTDIR}$(datadir)/openprs
 $genOpenprs$	( cd $(srcdir) && $(INSTALL_DATA) $(oprsclient_data) ${DESTDIR}$(datadir)/openprs )
 $genOpenprs$	$(MKINSTALLDIRS) ${DESTDIR}$(includedir)/server/openprs
