[autoconf] for tcl client code, add TCLSERV_CFLAGS to CFLAGS.
Fixes the build of modules generated with -t and with genom and
tclserv installed in different prefixes.

--- a/canvas/autoconf/config.mk.in
+++ b/canvas/autoconf/config.mk.in
@@ -128,7 +128,7 @@ KERNEL_INC=	@KERNEL_INC@
 
 XENO_CONFIG=	@XENO_CONFIG@
 
-$genTcl$TCL_CPPFLAGS=	@TCL_CPPFLAGS@
+$genTcl$TCL_CPPFLAGS=	@TCL_CPPFLAGS@ @TCLSERV_CFLAGS@
 $genTcl$TCL_LDFLAGS=	@TCL_LDFLAGS@ @TCL_LIB_FLAG@ @TCL_LIBS@
 
 $genOpenprs$TRANSGEN_CFLAGS = @TRANSGEN_CFLAGS@
