[instance] add support for multiple instances of a genom module.
for now instances are defined by the value of the
GENOM_INSTANCE_<module> environment variable, if set.

XXX client side support is limited.

--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -42,6 +42,7 @@ include $(top_builddir)/config.mk
 
 # -----------------------------------------------------------------------
 flist = \
+				genom/genom.h \
 				genom/testLib.h \
 				genom/testLibProto.h \
 				genom/genomError.h \
