Quote $CC in MKDEP invocation, in case $CC expands to multiple words
This can happen when using e.g. ccache.

--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -99,7 +99,7 @@ distclean: clean
 
 ifeq ($(findstring clean,${MAKECMDGOALS}),)
 depend DEPENDANCES:: $(SRCS)
-	$(MKDEP) -c$(CC) -oDEPENDANCES -t.lo $(CPPFLAGS) $?
+	$(MKDEP) -c"$(CC)" -oDEPENDANCES -t.lo $(CPPFLAGS) $?
 
 include DEPENDANCES
 endif
