--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,6 +1,6 @@
 
 #
-# Copyright (c) 2003,2008-2010 LAAS/CNRS
+# Copyright (c) 2003,2008-2010,2012 LAAS/CNRS
 # All rights reserved.
 #
 # Redistribution  and  use in source   and binary forms,  with or without
@@ -132,7 +132,7 @@ distclean: clean
 
 ifeq ($(findstring clean,$(MAKECMDGOALS)),)
 depend DEPENDANCES:: $(SRCS)
-	$(MKDEP) -c$(CC) -oDEPENDANCES -t.lo $(CPPFLAGS) $?
+	$(MKDEP) -c"$(CC)" -oDEPENDANCES -t.lo $(CPPFLAGS) $?
 
 include DEPENDANCES
 endif
