add  $(TCLSERV_CLIENT_LIB_CFLAGS) to build $(oprsclient_obj)
These files now includes tclserv_client/tclserv_client.h so
provide an option to locate this file.
If genom is intalled in the same prefix as libtclserv_client,
this issue goes un-noticed.

--- a/canvas/server/Makefile.in
+++ b/canvas/server/Makefile.in
@@ -251,7 +251,7 @@ $(tclclient_obj): $(OBJDIR)/%.lo: %.c
 		$(CFLAGS) -o $@ $<  $(LIBTOOL_COPT)
 
 $(oprsclient_obj): $(OBJDIR)/%.lo: %.c
-	$(LTCC) -c $(CPPFLAGS) $(TRANSGEN_CFLAGS) \
+	$(LTCC) -c $(CPPFLAGS) $(TRANSGEN_CFLAGS) $(TCLSERV_CLIENT_LIB_CFLAGS) \
 		$(CFLAGS) -o $@ $<  $(LIBTOOL_COPT)
 
 $(tclservclient_obj): $(OBJDIR)/%.lo: %.c
