In the generated autogen script, let autoconf be configurable
Use 'autoconf' (as before), or the value of the environment variable AUTOCONF
if it is set.

--- a/canvas/autogen.in
+++ b/canvas/autogen.in
@@ -13,7 +13,7 @@ if ( ! -f $user || ! -f "local.mk.in" || ! -f "codels/Makefile.in" ) {
 print "
 Creating build environment ...
   * Running autoconf\n";
-exit 1 if system("cd autoconf && autoconf -o ../configure");
+exit 1 if system('cd autoconf && ${AUTOCONF:-autoconf} -o ../configure');
 
 print "
 
