Fix detection of tcl in configure script
Instead of manually looking for tcl.h and libtcl.so, use the appropriate
variables from tclConfig.sh. This is more robust and fixes in particular the
configure on Ubuntu-13.04/amd64.

While here, drop tcl8.3 and add tcl8.5 in the default list of automatically
searched directories. On amd64, still look into /usr/lib in addition to lib64,
since all linux distributions have been iterating through all possible naming
strategies of the 'lib' directory on 64bits archs.

--- a/canvas/autoconf/config.mk.in
+++ b/canvas/autoconf/config.mk.in
@@ -1,6 +1,6 @@
 
 #
-# Copyright (c) 2003-2012 LAAS/CNRS                        --  Mon Aug 25 2003
+# Copyright (c) 2003-2013 LAAS/CNRS                        --  Mon Aug 25 2003
 # All rights reserved.
 #
 # Redistribution  and  use in source   and binary forms,  with or without
@@ -129,7 +129,7 @@ KERNEL_INC=	@KERNEL_INC@
 XENO_CONFIG=	@XENO_CONFIG@
 
 $genTcl$TCL_CPPFLAGS=	@TCL_CPPFLAGS@ @TCLSERV_CFLAGS@
-$genTcl$TCL_LDFLAGS=	@TCL_LDFLAGS@ @TCL_LIB_FLAG@ @TCL_LIBS@
+$genTcl$TCL_LDFLAGS=	@TCL_LDFLAGS@
 
 $genOpenprs$TRANSGEN_CFLAGS = @TRANSGEN_CFLAGS@
 $genOpenprs$TRANSGEN_LIBS = @TRANSGEN_LIBS@
